# secopsops

./: Dockerfile  README.md  app.py  inference.py  openenv.yaml  play.html  pyproject.toml  requirements.txt  secopsops_training.ipynb
env/: environment.py  graders.py  models.py  tasks.py
server/: app.py
