[project]
name = "secopsops-openenv"
version = "2.0.0"
description = "Real-world SOC analyst environment for AI agent training"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn>=0.30.1",
    "openai>=1.30.0",
    "pydantic>=2.0.0",
    "openenv-core>=0.2.0",
    "requests>=2.31.0",
]

[project.scripts]
server = "app:main"

[tool.openenv]
name = "secopsops-openenv"
version = "2.0.0"
tasks = ["easy", "medium", "hard"]
reset_endpoint = "/reset"
step_endpoint = "/step"
state_endpoint = "/state"
extra_endpoints = ["/tickets", "/siem/query"]
